changes the left menu to be z-index higher than the rest of the page. Make sure whenever we try and add notes, we always click on the correct note... refs #35

--- a/rbhl/static/css/rbhl.scss
+++ b/rbhl/static/css/rbhl.scss
@@ -132,6 +132,7 @@ h1 small {
     background: $blue;
     // height: 99vh;
     position: fixed;
+    z-index: 100;
 
 }
 #center-col {
